Fixed uneven padding on gray boxes

--- a/app/assets/stylesheets/_gray_box.scss
+++ b/app/assets/stylesheets/_gray_box.scss
@@ -14,7 +14,6 @@
 
     &__body {
         padding: $standard-spacing * 2;
-        padding-top: $standard-spacing;
 
         &--nopad {
             padding: 0;
